# amazon-kinesis-video-streams-pic

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  libkvspic.pc.cmake  libkvspicClient.pc.cmake  libkvspicState.pc.cmake  libkvspicUtils.pc.cmake
.github/: build_windows.bat
.github/workflows/: ci.yml  codeql-analysis.yml  lint.yml  pr-desc-lint.yml  version-check.yml
CMake/: Utilities.cmake
CMake/Dependencies/: libgtest-CMakeLists.txt
scripts/: check-clang.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/include/com/amazonaws/kinesis/video/client/: Include.h
src/client/src/: .Stream.c.swp  AckParser.c  AuthIntegration.c  Client.c  ClientState.c  FrameOrderCoordinator.c  Include_i.h  InputValidator.c  InputValidator.h  Stream.c  Stream.h  StreamEvent.c  StreamState.c
src/client/tst/: AcksFunctionalityTest.cpp  CallbacksAndPressuresFunctionalityTest.cpp  ClientApiFunctionalityTest.cpp  ClientApiTest.cpp  ClientFunctionalityTest.cpp  ClientTestFixture.cpp  ClientTestFixture.h  IntermittentProducerAutomaticStreamingTest.cpp  IntermittentProducerFunctionalityTest.cpp  MockConsumer.cpp  MockConsumer.h  MockProducer.cpp  MockProducer.h  StateTransitionFunctionalityTest.cpp  StreamApiFunctionalityScenarioTest.cpp  StreamApiFunctionalityTest.cpp  StreamApiServiceCallsTest.cpp  StreamApiTest.cpp  StreamDeviceTagsTest.cpp  StreamFragmentAggregationTest.cpp  StreamFunctionalityTest.cpp  StreamParallelTest.cpp  StreamPutGetTest.cpp  StreamRecoveryFunctionalityTest.cpp  StreamStateTransitionsTest.cpp  StreamStoppingFunctionalityTest.cpp  StreamTokenRotationTest.cpp  StreamingSession.cpp  StreamingSession.h  TokenRotationFunctionalityTest.cpp
src/common/: CMakeLists.txt
src/common/include/com/amazonaws/kinesis/video/common/: CommonDefs.h  PlatformUtils.h
src/duration/: CMakeLists.txt
src/duration/src/: Duration.c
src/heap/: CMakeLists.txt
src/heap/src/: AivHeap.c  AivHeap.h  Common.c  Common.h  Heap.c  HybridFileHeap.c  HybridFileHeap.h  HybridHeap.c  HybridHeap.h  Include_i.h  SystemHeap.c  SystemHeap.h
src/heap/tst/: HeapApiFunctionalityTest.cpp  HeapApiTest.cpp  HeapPerfTest.cpp  HeapTestFixture.cpp  HeapTestFixture.h  HybridFileHeapTest.cpp  HybridHeapTest.cpp
src/mkvgen/: CMakeLists.txt
src/mkvgen/src/: Include_i.h  MkvGenerator.c  MkvStatics.c  NalAdapter.c  NalAdapter.h  SpsParser.c  SpsParser.h
src/mkvgen/tst/: AnnexBCpdNalAdapterTest.cpp  AnnexBNalAdapterTest.cpp  AudioCpdParserTest.cpp  MkvgenApiFunctionalityTest.cpp  MkvgenApiTest.cpp  MkvgenTestFixture.h  SpsParserTest.cpp
src/state/: CMakeLists.txt
src/state/src/: Include_i.h  State.c
src/state/tst/: StateApiFunctionalityTest.cpp  StateApiTest.cpp  StateTestFixture.cpp  StateTestFixture.h
src/trace/: CMakeLists.txt
src/trace/src/: Include_i.h  TraceProfiler.c
src/utils/: CMakeLists.txt
src/utils/include/com/amazonaws/kinesis/video/utils/: Include.h
src/utils/src/: AesEncryption.c  Allocators.c  BitField.c  BitReader.c  CustomAssert.c  DynamicLibrary.c  Endianness.c  ExponentialBackoffRetryStrategy.c  ExponentialBackoffUtils.c  FileIo.c  FileLogger.c  HashTable.c  Include_i.h  InstrumentedAllocators.c  Logger.c  Math.c  Mutex.c  Semaphore.c  SerialDispatchQueue.c  SingleLinkedList.c  StackQueue.c  String.c  SyslogLogger.c  Tags.c  Thread.c  Threadpool.c  ThreadsafeBlockingQueue.c  Time.c  TimerQueue.c  Version.c
src/utils/tst/: CMakeLists.txt  Directory.cpp  Endianness.cpp  ExponentialBackoffUtilsBenchmark.cpp  ExponentialBackoffUtilsTest.cpp  FileLogger.cpp  InstrumentedAllocators.cpp  MathTest.cpp  Semaphore.cpp  SerialDispatchQueue.cpp  StackQueue.cpp  StringToInteger.cpp  Tags.cpp  Thread.cpp  Threadpool.cpp  ThreadsafeBlockingQueue.cpp  TimerQueue.cpp  UtilTestFixture.h
src/utils/tst/suppressions/: TSAN.supp
src/view/: CMakeLists.txt
src/view/src/: ContentView.c  Include_i.h
src/view/tst/: ViewApiFunctionalityTest.cpp  ViewApiTest.cpp  ViewDropPolicyFunctionalityTest.cpp  ViewTestFixture.h
tst/: CMakeLists.txt
tst/client/: AcksFunctionalityTest.cpp  CallbacksAndPressuresFunctionalityTest.cpp  ClientApiFunctionalityTest.cpp  ClientApiTest.cpp  ClientFunctionalityTest.cpp  ClientTestFixture.cpp  ClientTestFixture.h  FrameOrderCoordinatorTest.cpp  IntermittentProducerAutomaticStreamingTest.cpp  IntermittentProducerFunctionalityTest.cpp  MockConsumer.cpp  MockConsumer.h  MockProducer.cpp  StateTransitionFunctionalityTest.cpp  StreamApiFunctionalityScenarioTest.cpp  StreamApiFunctionalityTest.cpp  StreamApiServiceCallsTest.cpp  StreamApiTest.cpp  StreamDeviceTagsTest.cpp  StreamFunctionalityTest.cpp  StreamParallelTest.cpp  StreamPutGetTest.cpp  StreamRecoveryFunctionalityTest.cpp  StreamStateTransitionsTest.cpp  StreamStoppingFunctionalityTest.cpp  StreamTokenRotationTest.cpp  StreamingSession.cpp  TokenRotationFunctionalityTest.cpp
tst/duration/: DurationTest.cpp
tst/heap/: HeapApiFunctionalityTest.cpp  HeapApiTest.cpp  HeapPerfTest.cpp  HeapTestFixture.cpp  HybridFileHeapTest.cpp  HybridHeapTest.cpp
tst/mkvgen/: AnnexBCpdNalAdapterTest.cpp  AnnexBNalAdapterTest.cpp  AudioCpdParserTest.cpp  AvccNalAdapterTest.cpp  MkvgenApiFunctionalityTest.cpp  MkvgenApiTest.cpp  SpsParserTest.cpp
tst/scripts/: test_cmake_flags.sh
tst/state/: StateApiFunctionalityTest.cpp  StateApiTest.cpp  StateTestFixture.cpp
tst/trace/: TraceApiFunctionalityTest.cpp  TraceApiTest.cpp
tst/utils/: BitField.cpp  BitReader.cpp  Crc32Test.cpp  Directory.cpp  DoubleLinkedList.cpp  Endianness.cpp  ExponentialBackoffUtilsTest.cpp  FileIo.cpp  FileLogger.cpp  FindStringTest.cpp  HashTable.cpp  InstrumentedAllocators.cpp  IntegerToString.cpp  MathTest.cpp  Semaphore.cpp  SingleLinkedList.cpp  StackQueue.cpp  StringSearch.cpp  StringToInteger.cpp  Tags.cpp  Thread.cpp  Threadpool.cpp  ThreadsafeBlockingQueue.cpp  TimerQueue.cpp  TrimStringTest.cpp  UtilTestFixture.h  VersionsTest.cpp
tst/view/: ViewApiFunctionalityTest.cpp  ViewApiTest.cpp  ViewDropPolicyFunctionalityTest.cpp  ViewTestFixture.cpp
(+4 files in other folders)
